--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tvshows-app",
   "version": "0.1.0",
   "private": true,
+  "homapage": "https://larrrisa.github.io/tvshows/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -24,6 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
